[package]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia"]
description = "Wolf is a set of modules for realtime rendering, realtime streaming and game developing"
edition = "2021"
keywords = ["gamedev", "system", "gamedev", "render"]
license = "Apache-2.0"
name = "wolfengine"
readme = "README.md"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "3.0.3"

[lib]
crate-type = ["rlib"]
name = "wolf"
path = "src/lib.rs"

# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/

# shared dependencies between all
[dependencies]
#brotli = { version = "3.3.3" }
anyhow = {version = "1.0.66", default-features = false}
raw-window-handle = {version = "0.5.0", default-features = false, features = ["alloc"]} 
signals2 = {version = "0.3.2", default-features = false}
thiserror = {version = "1.0.37", default-features = false}
tracing = {version = "0.1.37", default-features = false, features = ["std", "attributes"]}

# dependencies of wasm 
[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = {version = "0.1.12", default-features = false, features = ["wasm-bindgen"]}
#rhai = { version = "1.10.0", default-features = false, features = ["sync", "internals", "wasm-bindgen"], optional = true }
serde = { version = "1.0.147", default-features = false, features = ["derive"]}
wasm-bindgen = { version = "0.2.83", default-features = false }
wasm-bindgen-futures = { version = "0.4.33", default-features = false }
wasm-mt = {version = "0.1.2", default-features = false }
web-sys = {version = "0.3.60", default-features = false, features = ["console", "Document", "Window", "Element"]}
wgpu = {version = "0.14.0", default-features = false, features = ["webgl"], optional = true}

# shared dependencies between arm, aarch64 & x86_64
[target.'cfg(any(target_arch = "arm", target_arch = "aarch64", target_arch = "x86_64"))'.dependencies]
instant = {version = "0.1.12", default-features = false}
pollster = {version = "0.2.5", default-features = false}
#rhai = { version = "1.10.0", default-features = false, features = ["sync", "internals"], optional = true}
rustls-pemfile = {version = "1.0.1", default-features = false}
tokio = {version = "1.21.2", default-features = false, features = ["full"]}
tokio-rustls = {version = "0.23.4", default-features = false, features = ["logging", "tls12"]}
tonic = {version = "0.8.2", default-features = false, features = ["codegen", "prost", "tls", "gzip"], optional = true}
webpki-roots = {version = "0.22.5", default-features = false}
wgpu = {version = "0.14.0", default-features = false, optional = true}

# dependencies of arm, aarch64
# [target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]

# dependencies of x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
async-raft = {version = "0.6.1", default-features = false, optional = true}
async-trait = {version = "0.1.58", default-features = false}
futures = { version = "0.3.25", default-features = false }
hyper = {version = "0.14.20", default-features = false}
may = {version = "0.3.22", default-features = false, optional = true}
memstore = {version = "0.2.0", default-features = false}
mimalloc = {version = "0.1.30", default-features = false, features = ["secure"]}
parking_lot = {version = "0.12.1",  default-features = false, features = ["deadlock_detection"]}
prost = {version = "0.11.0", default-features = false, optional = true}
scrap ={version = "0.5.0", default-features = false, optional = true}
serde_json = {version = "1.0.87", default-features = false, features = ["std"]}
sysinfo = {version = "0.26.7", default-features = false, features = ["multithread"]}
tokio-tungstenite = {version = "0.17.2", default-features = false, features = ["connect", "rustls"], optional = true}
uuid = {version = "1.2.1", default-features = false, features = ["v5"]}

[build-dependencies]
bindgen = {version = "0.61.0"}
tonic-build = {version = "0.8.2", default-features = false, features = ["transport", "prost"]}

[dev-dependencies]
image = {version ="0.24.4", default-features = false, features = ["jpeg", "png", "rgb"]}
lazy_static = {version = "1.4.0", default-features = false}
wav = {version = "1.0.0", default-features = false }

# features
[features]
all = [
    "media_ffmpeg", "media_openal", 
    "render", 
    "stream_rist", "stream_grpc", "stream_socket_client", "stream_socket_server",
    "system_fiber", "system_gamepad_sim", "system_js", 
    "system_lz4", "system_lzma", "system_raft", "system_screen_capture", "system_stacktrace"
    ]
default = ["all"]
media_ffmpeg = [] # enable ffmpeg
media_openal = [] # enable openal
render = ["wgpu"] # enable real-time rendering
stream_grpc = ["tonic", "prost"] # enable gRPC (http2/1.1) for stream module
stream_rist = [] # enable RIST streaming protocol for stream module
stream_socket_client = ["tokio-tungstenite"] # enable tcp/udp/ws server for stream module
stream_socket_server = ["tokio-tungstenite"] # enable tcp/udp/ws client for stream module
system_fiber = ["may"] # enable fiber
system_gamepad_sim = [] # enable gamepad simulator 
system_js = [] # enable javascript embedded engine for system module
system_lz4 = [] # enable LZ4 compression for system module
system_lzma = [] # enable LZMA compression for system module
system_raft = ["async-raft", "prost"] # enable raft algorithm for system module
system_screen_capture = ["scrap"] # enable screen capture
system_stacktrace = [] # enable boost stacktrace

# brotli = [] # enable brotli compression
# kafka_client = [] # enable Kafka client
# lzma = [] # enable LZMA Compression
# quic = [] # enable QUIC protocol
# redis_client = [] # enable redis client
# rocksDB_client = [] # enable rocksDB client
# simd = [] # enable SIMD
# webRTC_client = [] # enable webRTC


