[package]
categories = ["builder"]
description = "A library for building Wolf Engine"
edition = "2021"
keywords = ["builder"]
license = "Copyright © Pooya Eimandar"
name = "wolf_build"
readme = "https://github.com/WolfEngine/wolf/blob/main/README.md"
repository = "https://github.com/WolfEngine/wolf/"
version = "3.0.0"

[lib]
name = "wolf_build"
path = "src/lib.rs"

[features]
default = []

[dependencies]
bindgen = { version = "0.59.2" }
vcpkg = {default-features = false, version = "0.2.15"}
tonic-build = {default-features = false, features = ["transport", "prost", "compression"], version = "0.6.2"}