[package]
categories = ["builder"]
description = "Common macros for Wolf Engine"
edition = "2021"
keywords = ["macro"]
license = "https://github.com/WolfEngine/WolfEngine/blob/main/LICENSE.md"
name = "wolf_macros"
readme = "https://github.com/WolfEngine/WolfEngine/blob/main/README.md"
repository = "https://github.com/WolfEngine/WolfEngine/"
version = "3.0.0"

[lib]
name = "wolf_macros"
path = "src/lib.rs"

[features]
default = []

[dependencies]