[package]
author = "Pooya Eimandar"
edition = "2021"
name = "wolf_render"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_render"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from 
# https://android.googlesource.com/platform/external/rust/crates/
mimalloc = { default-features = false, version = "0.1.27" }

[build-dependencies]

[features]
default = []
