[package]
edition = "2021"
name = "wolf_render"
version = "3.0.0"
description = "A library for real-time rendering"
license = "private property project © Pooya Eimandar"
repository = "https://github.com/WolfEngine/wolf/"
keywords = ["gamedev", "realtime", "stream"]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia"]
readme = "https://github.com/WolfEngine/wolf/blob/main/README.md"

[lib]
crate-type = ["rlib"]
name = "wolf_render"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
mimalloc = { default-features = false, features = ["secure"], version = "0.1.27" }

[build-dependencies]

[features]
default = []
