[package]
author = "Pooya Eimandar"
edition = "2021"
name = "wolf_stream"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_stream"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
anyhow = { default-features = false, features = ["std"], version = "1.0.51" }
cxx = { default-features = false, version = "1.0.57" }
gstreamer-rtsp = { default-features = false, version = "0.17.0" }
gstreamer-rtsp-server = { default-features = false, version = "0.17.2" }
mimalloc = { default-features = false, version = "0.1.27" }
tokio = { default-features = false, features = ["rt-multi-thread", "macros"], version = "1.14.0" }

[build-dependencies]
cxx-build = { default-features = false, version = "1.0.57" }
git2 = { default-features = false, version = "0.13.25" }
plist = { default-features = false, version = "1.3.1" }
run_script = { default-features = false, version = "0.9.0" }

[features]
default = []
