[package]
categories = ["game-development", "game-engines", "games", "graphics", "multimedia"]
description = "A library for real-time streaming"
edition = "2021"
keywords = ["gamedev", "realtime", "stream"]
license = "https://github.com/WolfEngine/WolfEngine/blob/main/LICENSE.md"
name = "wolf_stream"
readme = "https://github.com/WolfEngine/WolfEngine/blob/main/README.md"
repository = "https://github.com/WolfEngine/wolf/"
version = "3.0.0"

[lib]
crate-type = ["rlib"]
name = "wolf_stream"
path = "src/lib.rs"

[dependencies]
# before adding any dependency please check it out from
# https://android.googlesource.com/platform/external/rust/crates/
anyhow = { default-features = false, features = ["std"], version = "1.0.55" }
cxx = { default-features = false, features = ["std"], version = "1.0.65" }
gstreamer-rtsp = { default-features = false, version = "0.18.0" }
gstreamer-rtsp-server = { default-features = false, version = "0.18.5" }
mimalloc = { default-features = false, features = ["secure"], version = "0.1.28" }
tokio = { default-features = false, features = ["rt-multi-thread", "macros"], version = "1.17.0" }

[build-dependencies]
cxx-build = { default-features = false, version = "1.0.65" }
git2 = { default-features = false, features = ["https", "ssh", "ssh_key_from_memory"], version = "0.13.25" }
plist = { default-features = false, version = "1.3.1" }
wolf_build = { path = "../wolf_build" }

[features]
default = []
